--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -2,6 +2,23 @@
 
   "item.cloakmix.reaper_cloth": "Reaper Cloth",
 
+  "block.cloakmix.spectral_patchwork_block_white": "White Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Orange Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Magenta Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Light Blue Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Yellow Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Lime Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Pink Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Gray Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Light Gray Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Cyan Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Purple Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Blue Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Brown Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Green Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Red Spectral Patchwork Block",
+  "block.cloakmix.spectral_patchwork_block_white": "Black Spectral Patchwork Block",
+
   "block.cloakmix.spooky_grass_block": "Spooky Grass Block",
   "block.cloakmix.spooky_soil": "Spooky Soil",
 
