- Added Basic Cloaks

--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -1,6 +1,7 @@
 {
 
   "item.cloakmix.reaper_cloth": "Reaper Cloth",
+  "item.cloakmix.basic_cloak": "Basic Cloak",
 
   "block.cloakmix.spectral_patchwork_block_white": "White Spectral Patchwork Block",
   "block.cloakmix.spectral_patchwork_block_orange": "Orange Spectral Patchwork Block",
