--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -38,6 +38,7 @@
   "block.cloakmix.bald_cypress_fence_gate": "Bald Cypress Fence Gate",
 
   "enchantment.cloakmix.altered_sight": "Altered Sight",
+  "enchantment.cloakmix.anonymity": "Anonymity",
 
   "itemGroup.cloakmix_item_tab": "FN - Cloak Mix (Items)",
   "itemGroup.cloakmix_block_tab": "FN - Cloak Mix (Blocks)"
