--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -39,6 +39,7 @@
 
   "enchantment.cloakmix.altered_sight": "Altered Sight",
   "enchantment.cloakmix.anonymity": "Anonymity",
+  "enchantment.cloakmix.billowing": "Billowing",
 
   "itemGroup.cloakmix_item_tab": "FN - Cloak Mix (Items)",
   "itemGroup.cloakmix_block_tab": "FN - Cloak Mix (Blocks)"
