--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.cloakmix.reaper_cloth": "Reaper Cloth",
   "item.cloakmix.basic_cloak": "Basic Cloak",
 
+  "item.cloakmix.sanguine_dagger": "Sanguine Dagger",
+
   "block.cloakmix.spectral_patchwork_block_white": "White Spectral Patchwork Block",
   "block.cloakmix.spectral_patchwork_block_orange": "Orange Spectral Patchwork Block",
   "block.cloakmix.spectral_patchwork_block_magenta": "Magenta Spectral Patchwork Block",
