--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.cloakmix.basic_cloak": "Basic Cloak",
 
   "item.cloakmix.sanguine_dagger": "Sanguine Dagger",
+  "item.cloakmix.vorpal_blade": "Vorpal Blade",
 
   "block.cloakmix.spectral_patchwork_block_white": "White Spectral Patchwork Block",
   "block.cloakmix.spectral_patchwork_block_orange": "Orange Spectral Patchwork Block",
