- spectral loom start

--- a/src/main/resources/assets/cloakmix/lang/en_us.json
+++ b/src/main/resources/assets/cloakmix/lang/en_us.json
@@ -23,6 +23,8 @@
   "block.cloakmix.spectral_patchwork_block_red": "Red Spectral Patchwork Block",
   "block.cloakmix.spectral_patchwork_block_black": "Black Spectral Patchwork Block",
 
+  "block.cloakmix.spectral_loom": "Spectral Loom",
+
   "block.cloakmix.spooky_grass_block": "Spooky Grass Block",
   "block.cloakmix.spooky_soil": "Spooky Soil",
 
